--- a/homepage/CSS/main.css
+++ b/homepage/CSS/main.css
@@ -95,7 +95,86 @@ body {
     padding-right: 0;
     padding-left: 0;
 }
+/*SLIDER*/
 
+.slider {
+  position: relative;
+  width: 100%;
+  height: 467px;
+  border: 1px solid #ddd;
+}
+
+.slide {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.active-slide {
+    display: block;
+}
+
+/*arrows and dots*/
+.slide-feature {
+  text-align: center;
+  height: 467px;
+}
+
+.slide-feature img {
+  margin-top: 112px;
+  margin-bottom: 28px;
+}
+
+.slide-feature a {
+  display: block;
+  color: #6fc5e0;
+  
+  font-family: "HelveticaNeueMdCn", Helvetica, sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  
+  font-size: 20px;
+}
+
+.slider-nav {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.arrow-prev {
+  margin-right: 45px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 9px;
+}
+
+.arrow-next {
+  margin-left: 45px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 9px;
+}
+
+.slider-dots {
+  list-style: none;
+  display: inline-block;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+.slider-dots li {
+  color: #bbbcbc;
+  display: inline;
+  font-size: 30px;
+  margin-right: 5px;
+}
+
+.slider-dots li.active-dot {
+  color: #363636;
+}
 /*!
  * Bootstrap v3.1.1 (http://getbootstrap.com)
  * Copyright 2011-2014 Twitter,  Inc.
@@ -4718,6 +4797,16 @@ margin-top: 0;
 }
 
 .main-pics .thumbnail {
+    margin: none;
+    padding: none;
+    border: none;
+    background-color: transparent;
+    position: relative;
+}
+
+.main-pics .thumbnail-feature {
+margin-top: -108px;
+ margin-bottom: -4px;
     margin: none;
     padding: none;
     border: none;
