--- a/homepage/CSS/main.css
+++ b/homepage/CSS/main.css
@@ -5,6 +5,12 @@ body {
   position: relative;
 }
 
+#hTitle {
+	color: #fff; 
+	font-size: 48px;
+	margin-top: -4%;
+}
+
 .cam_title {
 
   color: #fff;
@@ -12,7 +18,17 @@ body {
   font-family: 'Big Caslon','Book Antiqua',Serif;
   text-align: center;
   margin: 90px;
+  margin-top: 0%;
   font-weight: bold;
+}
+
+.camPills {
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+.pillsContent {
+	text-align: center;
 }
 
 .camlist {
@@ -89,7 +105,7 @@ body {
 
 .jumbotron {
   background-image:url('../images/head.jpg');
-  height: 350px;
+  height: 200px;
   background-size: cover;
     margin-bottom: 0;
     padding-right: 0;
@@ -101,7 +117,6 @@ body {
   position: relative;
   width: 100%;
   height: 467px;
-  border: 1px solid #ddd;
 }
 
 .slide {
@@ -4784,6 +4799,7 @@ margin-top: 0;
 .main-pics {
     background-color: #efefef;
     border-bottom: 1px solid #dbdbdb;
+	margin-top: -30px;
 }
 
 .main-pics h2 {
