--- a/homepage/CSS/main.css
+++ b/homepage/CSS/main.css
@@ -42,6 +42,34 @@ body {
 	color: black;
 }
 
+/*Hidden link to mini-game*/
+#hidden {
+	color: black;	
+}
+
+#hidden:hover {
+	color: black;	
+	text-decoration: none;
+	cursor: text;
+}
+
+.divGame {
+  background-image:url('../images/sky.jpg');
+  background-size: auto;
+}
+
+/* Camera and film */
+#cam {
+	position: relative; 
+}
+
+#film {
+	position: relative; 
+	left: 300px;
+	top: 300px;
+}
+
+/* Cameras list */
 .camlist {
     width: 300px;
     height: 250px;
@@ -60,6 +88,7 @@ body {
   font-family: 'Big Caslon','Book Antiqua',Serif;
 }
 
+/* MENU */
 .menu {
   background: #202024 url('../images/menu_pattern.jpg') repeat left top;
   left: -285px;  
@@ -123,6 +152,7 @@ body {
     padding-left: 0;
 }
 
+/* About interview */
 .speech {
 	margin-left: 4%;
 	margin-right: 4%;
